# enterprise-marketing-ai-agents

./: .env.example  .gitignore  LICENSE  Makefile  README.md  launch_gradio.py  pyproject.toml  requirements.txt  setup.py  start_all.sh  start_dashboard.sh  start_gradio.sh  stop_all.sh  streamlit_app.py  template.py
.streamlit/: config.toml
api/: README.md  dependencies.py  main.py
assets/: .gitkeep
config/: agents_config.yaml  api_config.yaml  memory_config.yaml  models_config.yaml  settings.py
docs/: agents_overview.md  api_reference.md  architecture.md  architecture_detailed.md
examples/: advanced_retriever_example.py  chunking_example.py  context_augmentation_example.py  document_ingestion_example.py  embedding_generation_example.py  feedback_learning_examples.py  memory_config_example.py  memory_management_example.py  prompt_manager_integration.py  rag_evaluation_demo.py  rag_pipeline_integration.py  rag_pipeline_with_retriever.py
scripts/: add_marketing_content.py  add_marketing_content_incremental.py  add_marketing_content_simple.py  add_synthetic_data_to_kb.py  clear_test_cache.sh  demo_customer_support_handoff.py  generate_handoff_scenarios.py  initialize_rag_pipeline.py  quick_test_intent.py  run_api.py  run_dashboard.py  run_data_extraction.py  template.py  test_agent_prompt_integration.py  test_analytics_agent.py  test_api.py  test_api_response.py  test_contextual_reports.py  test_customer_support_handoff.py  test_dashboard_integration.py  test_e2e_handoffs.py  test_feedback_learning.py  test_feedback_learning_handoff.py  test_fixes.py  test_rag.py  (+14 more)
(+90 files in other folders)
